# bool

./: README.md  bool.cabal
base/: Bool.hs  bool-base.cabal
base/Base/: Bool.hs
base/core/: Bool.hs  BoolCore.hs
church/: Bool.hs  bool-church.cabal
church/Church/: Bool.hs
church/core/: Bool.hs  BoolCore.hs
example/: Main.hs  bool-example.cabal
example/lib/: Bool.hsig  Example.hs
example/lib/Sig/: Bool.hsig
fast/: Bool.hs
indef/: bool-example.hs  bool-indef.cabal
indef/Inst/: Bool.hs
indef/example/: Example.hs
indef/example/Sig/: Bool.hsig
sig/: Bool.hsig  bool-sig.cabal
sig/Sig/: Bool.hsig
utils/: Utils.hs  bool-utils.cabal
