cabal-version: 2.4
name: bool
homepage: https://github.com/exordium/bool#readme
version: 0.1.0.0
category: Exordium
synopsis: Bool signature and compatible types / utils
stability: cursed
bug-reports: https://github.com/exordium/bool/issues
author: Dai
maintainer: daig@sodality.cc
copyright: 2018 Sodality
license: MIT

source-repository head
  type: git
  location: https://github.com/exordium/bool

common x
  default-language: Haskell2010
  default-extensions: DataKinds,NoImplicitPrelude,MagicHash,ViewPatterns,PatternSynonyms,RankNTypes,BlockArguments

library bool-sig
  import: x
  hs-source-dirs: sig
  signatures: Sig.Bool
  build-depends: ghc-prim

library bool-utils
  import: x
  hs-source-dirs: utils
  exposed-modules: Utils
  signatures: Sig.Bool
  build-depends: bool-sig

library bool-base-core
  import: x
  hs-source-dirs: base/core
  exposed-modules: BoolCore
  build-depends: ghc-prim

library bool-base
  import: x
  hs-source-dirs: base
  exposed-modules: Base.Bool
  reexported-modules: Base.Bool as Sig.Bool
  build-depends: ghc-prim,bool-base-core, bool-utils
  mixins: bool-utils requires (Sig.Bool as BoolCore)

library bool-church-core
  import: x
  hs-source-dirs: church/core
  exposed-modules: BoolCore

library bool-church
  import: x
  hs-source-dirs: church
  exposed-modules: Church.Bool
  reexported-modules: Church.Bool as Sig.Bool
  build-depends: bool-church-core, bool-utils
  mixins: bool-utils requires (Sig.Bool as BoolCore)

library bool-example-indef
  import: x
  exposed-modules: Example
  signatures: Sig.Bool
  hs-source-dirs: example/lib
  build-depends: bool-sig, base

executable bool-example-exe
  import: x
  hs-source-dirs: example
  main-is: Main.hs
  build-depends: bool-example-indef, bool-base, bool-church
  mixins: bool-example-indef (Example as Base.Example)   requires (Sig.Bool as Base.Bool)
        , bool-example-indef (Example as Church.Example) requires (Sig.Bool as Church.Bool)
