cabal-version: 2.4
name: bool
homepage: https://github.com/exordium/bool#readme
version: 0.1.0.0
category: Exordium
synopsis: Bool signature and compatible types / utils
stability: cursed
bug-reports: https://github.com/exordium/bool/issues
author: Dai
maintainer: daig@sodality.cc
copyright: 2018 Sodality
license: MIT

source-repository head
  type: git
  location: https://github.com/exordium/bool

common x
  default-language: Haskell2010
  default-extensions: DataKinds,NoImplicitPrelude,ViewPatterns,PatternSynonyms,RankNTypes,BlockArguments

library bool-sig
  import: x
  hs-source-dirs: sig
  signatures: Bool
  build-depends: ghc-prim

-- Additional operations for Bools, extending a minimal signature to implement the whole signature
library bool-utils
  import: x
  hs-source-dirs: utils
  exposed-modules: Utils
  signatures: Bool
  build-depends: bool-sig

-- Internal minimal instantiation of Base-compatible Bools, to be extended by Utils
library bool-base-core
  import: x
  hs-source-dirs: base/core
  exposed-modules: Bool
  build-depends: ghc-prim

-- Base-compatible Bools
library bool-base
  import: x
  hs-source-dirs: base
  exposed-modules: Bool
  build-depends: ghc-prim,bool-base-core, bool-utils
  mixins: bool-base-core      (Bool as Bool.Core)
        , bool-utils requires (Bool as Bool.Core)

-- Internal minimal instantiation of Church encoded Bools, to be extended by Utils
library bool-church-core
  import: x
  hs-source-dirs: church/core
  exposed-modules: Bool

-- Church encoded Bools
library bool-church
  import: x
  hs-source-dirs: church
  exposed-modules: Bool
  build-depends: bool-church-core, bool-utils
  mixins: bool-church-core    (Bool as Bool.Core)
        , bool-utils requires (Bool as Bool.Core)

-- Example IO action that's indefinite in its representation of Bools
library bool-example-indef
  import: x
  exposed-modules: Example
  signatures: Bool
  hs-source-dirs: example/lib
  build-depends: bool-sig, base

-- Example executable that uses both Base Bools and Church Bools
executable bool-example
  import: x
  hs-source-dirs: example
  main-is: Main.hs
  build-depends: bool-example-indef, bool-base, bool-church
  mixins:
          bool-base   (Bool as Bool.Base),
          bool-church (Bool as Bool.Church),
          bool-example-indef (Example as Example.Base)   requires (Bool as Bool.Base),
          bool-example-indef (Example as Example.Church) requires (Bool as Bool.Church)
