cabal-version: 2.2
name: bool-base
homepage: https://github.com/exordium/bool-base#readme
version: 0.1.0.0
category: Exordium
synopsis: GHC's Bool type compatible with bool-sig
stability: cursed
bug-reports: https://github.com/exordium/bool-base/issues
author: Dai
maintainer: daig@sodality.cc
copyright: 2018 Sodality
license: MIT

source-repository head
  type: git
  location: https://github.com/exordium/bool-base

common x
  default-language: Haskell2010
  default-extensions: DataKinds,NoImplicitPrelude,MagicHash

library core
  import: x
  hs-source-dirs: core
  exposed-modules: BoolCore
  build-depends: ghc-prim

library
  import: x
  exposed-modules: Base.Bool
  reexported-modules: Base.Bool as Sig.Bool
  build-depends: ghc-prim,core, bool-utils
  mixins: bool-utils requires (Sig.Bool as BoolCore)
