cabal-version: 2.2
name: bool-church
homepage: https://github.com/exordium/bool#readme
version: 0.1.0.0
category: Exordium
synopsis: Church encoded bools compatible with bool-sig
stability: cursed
bug-reports: https://github.com/exordium/bool/issues
author: Dai
maintainer: daig@sodality.cc
copyright: 2018 Sodality
license: MIT

source-repository head
  type: git
  location: https://github.com/exordium/bool

library
  default-language: Haskell2010
  default-extensions: RankNTypes,NoImplicitPrelude, BlockArguments
  exposed-modules: Bool
