cabal-version: 2.2
name: bool-church
homepage: https://github.com/exordium/bool#readme
version: 0.1.0.0
category: Exordium
synopsis: Church encoded bools compatible with bool-sig
stability: cursed
bug-reports: https://github.com/exordium/bool/issues
author: Dai
maintainer: daig@sodality.cc
copyright: 2018 Sodality
license: MIT

source-repository head
  type: git
  location: https://github.com/exordium/bool

common x
  default-language: Haskell2010
  default-extensions: RankNTypes,NoImplicitPrelude, BlockArguments, PatternSynonyms, ViewPatterns

library core
  import: x
  hs-source-dirs: core
  exposed-modules: BoolCore

library
  import: x
  exposed-modules: Church.Bool
  reexported-modules: Church.Bool as Sig.Bool
  build-depends: core, bool-utils
  mixins: bool-utils requires (Sig.Bool as BoolCore)
