cabal-version: 2.2
name: bool-indef
homepage: https://github.com/exordium/bool#readme
version: 0.1.0.0
category: Exordium
synopsis: Utility functions for bools based on a minimal signature
stability: cursed
bug-reports: https://github.com/exordium/bool/issues
author: Dai
maintainer: daig@sodality.cc
copyright: 2018 Sodality
license: MIT

source-repository head
  location: https://github.com/exordium/bool

common x
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude

library
  import: x
  exposed-modules: Inst.Bool
  signatures: Sig.Bool
  build-depends: bool-sig

-- example usages to extend the minimal implementation to
-- instantiate the whole signature
library bool-indef-base
  import: x
  reexported-modules: Inst.Bool as Bool
  build-depends: bool-indef, bool-base
  mixins: bool-indef requires (Sig.Bool as Bool)

library bool-indef-church
  import: x
  reexported-modules: Inst.Bool as Bool
  build-depends: bool-indef, bool-church
  mixins: bool-indef requires (Sig.Bool as Bool)

library bool-example
  import: x
  exposed-modules: Example
  signatures: Sig.Bool
  hs-source-dirs: example
  build-depends: bool-sig, base

executable bool-example-exe
  import: x
  main-is: bool-example.hs
  build-depends: bool-example, bool-base, bool-church, bool-indef
  mixins: bool-base    (Bool as Base.Bool)
        , bool-church  (Bool as Church.Bool)
        , bool-indef   (Inst.Bool as BBool)        requires (Sig.Bool as Base.Bool)
        , bool-indef   (Inst.Bool as CBool)        requires (Sig.Bool as Church.Bool)
        , bool-example (Example as Base.Example)   requires (Sig.Bool as BBool)
        , bool-example (Example as Church.Example) requires (Sig.Bool as CBool)
