cabal-version: 2.2
name: bool-sig
homepage: https://github.com/exordium/bool-sig#readme
version: 0.1.0.0
category: Exordium
synopsis: Backpack signature for a boolean datatype
stability: cursed
bug-reports: https://github.com/exordium/bool-sig/issues
author: Dai
maintainer: daig@sodality.cc
copyright: 2018 Sodality
license: MIT

source-repository head
  type: git
  location: https://github.com/exordium/bool-sig

library
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
  signatures: Sig.Bool
  build-depends: ghc-prim
