cabal-version: 2.2
name: bool-utils
homepage: https://github.com/exordium/bool#readme
version: 0.1.0.0
category: Exordium
synopsis: Utility functions for bools based on a minimal signature
stability: cursed
bug-reports: https://github.com/exordium/bool/issues
author: Dai
maintainer: daig@sodality.cc
copyright: 2018 Sodality
license: MIT

source-repository head
  location: https://github.com/exordium/bool

library
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude, PatternSynonyms, ViewPatterns
  exposed-modules: Utils
  signatures: Sig.Bool
  build-depends: bool-sig
